--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,8 +34,8 @@
 
     <string name="ecg_real_time_text_1">Place your fingertips on electrodes to start ECG recording.</string>
     <string name="ecg_real_time_text_2">Speak out loud any symptoms you are feeling.</string>
-    <string name="ecg_real_time_turn_off_voice"> </string>
-    <string name="ecg_real_time_turn_on_voice"> </string>
+    <string name="ecg_real_time_turn_off_voice">Turn voice recording off</string>
+    <string name="ecg_real_time_turn_on_voice">Turn voice recording on</string>
     <string name="explanation_grant_permission">Grant Permission</string>
     <string name="zero_time">00:00</string>
     <string name="no_heartrate">---</string>
@@ -52,4 +52,5 @@
     <string name="transcription_voice_prompt_2"> </string>
     <string name="otc_title_record_ecg">Record ECG</string>
     <string name="record_ecg">Record ECG</string>
+    <string name="fmt_hr_min_2_digit">%1$02d:%2$02d</string>
 </resources>
